@@ -69,6 +69,7 @@ export(EGA.estimate)
 export(EGA.fit)
 export(Embed)
 export(LCT)
+export(Oinformation)
 export(TMFG)
 export(UVA)
 export(auto.correlate)
@@ -84,6 +85,7 @@ export(compare.EGA.plots)
 export(convert2igraph)
 export(convert2tidygraph)
 export(dimensionStability)
+export(dualTotalCor)
 export(dynEGA)
 export(dynEGA.ind.pop)
 export(entropyFit)
