@@ -8,6 +8,8 @@ WEBSITE: https://r-ega.net
 
 + ADD: `network.compare` function to test for differences in network structures using three different metrics (Frobenius Norm, Jensen-Shannon Similarity, total network strength)
 
++ ADD: information theoretic measures of dual total correlation (`dualTotalCor`) and O-information (`Oinformation`)
+
 + UPDATE: added 'signed' argument in `jsd` to allow for signed or absolute networks to be used in computations (includes downstream functions: `infoCluster`)
 
 + UPDATE: NEWS is now formatted in markdown
